# cargo-dockerimage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: docker.rs  main.rs
