[package]
name = "cargo-docker"
version = "0.1.0"
authors = ["bishtpawan <pawan.bisht@knoldus.in>"]
license = "Apache-2.0"
description = "A plugin for Rust to support Docker"
repository = "https://github.com/bishtpawan/cargo-docker"
keywords = ["docker", "plugin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8.0"
log = "0.4.6"
env_logger = "0.5.12"